Reorganisaton des tabulation

--- a/Accueil.html
+++ b/Accueil.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Invictus</title>
-		<link rel="stylesheet" type="text/css" href=".css">
-	</head>
-	<body>
-		<div id="header">
-			<h1>Invictus</h1>
+
+<head>
+	<title>Invictus</title>
+	<link rel="stylesheet" type="text/css" href="_Aziz.css">
+</head>
+
+<body>
+	<div id="header">
+		<h1>Invictus</h1>
+	</div>
+
+	<div id="corps">
+
+		<div id="menu">
+			<h2>Menu</h2>
+			<ul>
+				<li><a href="Accueil.html">Accueil</a></li>
+				<li><a href="Contexte.html">Contexte</a></li>
+				<!-- p1 -->
+				<li><a href="Histoire.html">Histoire</a></li>
+				<!-- p2 -->
+				<li><a href="Réalisation.html">Réalisation</a></li>
+				<!-- p1 -->
+				<li><a href="Crédits.html">Crédits</a></li>
+				<!-- p2 -->
+			</ul>
+			<p class="top"><a href="#header" class="top">Revenir en haut de la page</a></p>
 		</div>
 
-		<div id="corps">
-
-			<div id="menu">
-				<h2>Menu</h2>
-               	<ul>
-                    	<li><a href="Accueil.html">Accueil</a></li>
-                    	<li><a href="Contexte.html">Contexte</a></li><!-- p1 -->
-			     	<li><a href="Histoire.html">Histoire</a></li><!-- p2 -->
-			     	<li><a href="Réalisation.html">Réalisation</a></li><!-- p1 -->
-			     	<li><a href="Crédits.html">Crédits</a></li><!-- p2 -->
-               	</ul>
-				<p class="top"><a href="#header" class="top">Revenir en haut de la page</a></p>
+		<div id="contenu">
+			<h2>Synopsis</h2>
+			<div class="clearfix">
+				<img src="data/image%201.jpg" />
+				<p>En 1994, l'élection de Nelson Mandela consacre la fin de l'Apartheid, mais l'Afrique du Sud reste une nation profondément divisée sur le plan racial et économique. Pour unifier le pays et donner à chaque citoyen un motif de fierté, Mandela mise sur
+					le sport, et fait cause commune avec le capitaine de la modeste équipe de rugby sud-africaine. Leur pari : se présenter au Championnat du Monde 1995...</p>
 			</div>
-
-			<div id="contenu">
-				<h2>Synopsis</h2>
-               	<div class="clearfix">
-                    	<img src="data/image%201.jpg"/>
-                    	<p>En 1994, l'élection de Nelson Mandela consacre la fin de l'Apartheid, mais l'Afrique du Sud reste une nation profondément divisée sur le plan racial et économique. Pour unifier le pays et donner à chaque citoyen un motif de fierté, Mandela mise sur le sport, et fait cause commune avec le capitaine de la modeste équipe de rugby sud-africaine. Leur pari : se présenter au Championnat du Monde 1995...</p>
-               	</div>
-               	<iframe width="1280" height="720" src="https://www.youtube.com/embed/PEO6-fe9qPA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-			</div>
+			<iframe width="1280" height="720" src="https://www.youtube.com/embed/PEO6-fe9qPA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 		</div>
 
-		<div id="footer">
-			<p>Les auteurs sont fier de leur site web !</p>
-			<p class="copyright">Alexandra Roso / Aziz Mhirsi</p>
-			<p class="copyright">Copyright &#169; 2018 -- Toute reproduction interdite.</p>
-		</div>
-	</body>
+	</div>
+
+	<div id="footer">
+		<p>Les auteurs sont fier de leur site web !</p>
+		<p class="copyright">Alexandra Roso / Aziz Mhirsi</p>
+		<p class="copyright">Copyright &#169; 2018 -- Toute reproduction interdite.</p>
+	</div>
+</body>
+
 </html>
