--- a/Histoire.html
+++ b/Histoire.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Invictus</title>
-		<link rel="stylesheet" type="text/css" href=".css">
-	</head>
-	<body>
-		<div id="header">
-			<h1>Invictus</h1>
+
+<head>
+	<title>Invictus</title>
+	<link rel="stylesheet" type="text/css" href=".css">
+</head>
+
+<body>
+	<div id="header">
+		<h1>Invictus</h1>
+	</div>
+
+	<div id="corps">
+
+		<div id="menu">
+			<h2>Menu</h2>
+			<ul>
+				<li><a href="Accueil.html">Accueil</a></li>
+				<li><a href="Contexte.html">Contexte</a></li>
+				<!-- p1 -->
+				<li><a href="Histoire.html">Histoire</a></li>
+				<!-- p2 -->
+				<li><a href="Réalisation.html">Réalisation</a></li>
+				<!-- p1 -->
+				<li><a href="Crédits.html">Crédits</a></li>
+				<!-- p2 -->
+			</ul>
+			<p class="top"><a href="#header" class="top">Revenir en haut de la page</a></p>
 		</div>
 
-		<div id="corps">
-
-			<div id="menu">
-				<h2>Menu</h2>
-               	<ul>
-                    	<li><a href="Accueil.html">Accueil</a></li>
-                    	<li><a href="Contexte.html">Contexte</a></li><!-- p1 -->
-			     	<li><a href="Histoire.html">Histoire</a></li><!-- p2 -->
-			     	<li><a href="Réalisation.html">Réalisation</a></li><!-- p1 -->
-			     	<li><a href="Crédits.html">Crédits</a></li><!-- p2 -->
-               	</ul>
-				<p class="top"><a href="#header" class="top">Revenir en haut de la page</a></p>
-			</div>
-
-			<div id="contenu">
-				<h2>Histoire</h2>
-                    <p>Le film Invictus est un film basée sur l'histoire réelle de l'Afrique du sud. Nelson Mandela vient d'être élu président de l'Afrique du Sud, il souhaite unir sont pays, développer l'économie et son ouverture au monde. Pour cela il essaye de rassurer la minorité blanche, et de faire accepter au reste du pays qu'il ne faut pas avoir de rancoeur contre l'ancien gouvernement. </br></br> L'histoire se passe en 1995, l'Afrique du Sud organise la coupe du monde de rugby. Mandela voit en cette occasion sportive le moyen de créer un sentiment d'union national pour supporter l'équipe des Springboks. Cependant cela sera difficile car cette équipe représente pour les Sud-africains noir un symbole de l'apartheid et de leur domination. </br></br> François Pienaar, le capitaine de l'équipe de rugby est convié par le président pour prendre le thé, c'est le moment que choisit ce dernier pour l'inspirer et le motiver à gagner cette coupe, il fait prendre conscience au joueur de l'importance de cette compétition. L'équipe de rugby devra s'entrainer durement en peu de temps pour espérer gagner la coupe, l'équipe n'est constitué que d'un seul joueur noir « Chester Williams » et d'une majorité de joueur blancs. L'équipe fera des apparitions dans les ghettos dans le but de séduire la population qui peu à peu se mettra à les supporter, puis ils irons visiter la prison de Robben Island ou était incarcérée Mandela. </br></br> Le président à la veille du match transmet aux Springboks le poème « Invictus » qui inspirera l'équipe. Finalement l’Afrique du sud réussi à gagner la compétition supportée par un pays qui sera unit derrière l'équipe. </p>
-			</div>
-
+		<div id="contenu">
+			<h2>Histoire</h2>
+			<p>Le film Invictus est un film basée sur l'histoire réelle de l'Afrique du sud. Nelson Mandela vient d'être élu président de l'Afrique du Sud, il souhaite unir sont pays, développer l'économie et son ouverture au monde. Pour cela il essaye de rassurer
+				la minorité blanche, et de faire accepter au reste du pays qu'il ne faut pas avoir de rancoeur contre l'ancien gouvernement. </br>
+				</br> L'histoire se passe en 1995, l'Afrique du Sud organise la coupe du monde de rugby. Mandela voit en cette occasion sportive le moyen de créer un sentiment d'union national pour supporter l'équipe des Springboks. Cependant cela sera difficile car cette
+				équipe représente pour les Sud-africains noir un symbole de l'apartheid et de leur domination. </br>
+				</br> François Pienaar, le capitaine de l'équipe de rugby est convié par le président pour prendre le thé, c'est le moment que choisit ce dernier pour l'inspirer et le motiver à gagner cette coupe, il fait prendre conscience au joueur de l'importance de
+				cette compétition. L'équipe de rugby devra s'entrainer durement en peu de temps pour espérer gagner la coupe, l'équipe n'est constitué que d'un seul joueur noir « Chester Williams » et d'une majorité de joueur blancs. L'équipe fera des apparitions
+				dans les ghettos dans le but de séduire la population qui peu à peu se mettra à les supporter, puis ils irons visiter la prison de Robben Island ou était incarcérée Mandela. </br>
+				</br> Le président à la veille du match transmet aux Springboks le poème « Invictus » qui inspirera l'équipe. Finalement l’Afrique du sud réussi à gagner la compétition supportée par un pays qui sera unit derrière l'équipe. </p>
 		</div>
 
-		<div id="footer">
-			<p>Les auteurs sont fier de leur site web !</p>
-			<p class="copyright">Alexandra Roso / Aziz Mhirsi</p>
-			<p class="copyright">Copyright &#169; 2018 -- Toute reproduction interdite.</p>
-		</div>
-	</body>
+	</div>
+
+	<div id="footer">
+		<p>Les auteurs sont fier de leur site web !</p>
+		<p class="copyright">Alexandra Roso / Aziz Mhirsi</p>
+		<p class="copyright">Copyright &#169; 2018 -- Toute reproduction interdite.</p>
+	</div>
+</body>
+
 </html>
