--- a/Accueil.html
+++ b/Accueil.html
@@ -14,6 +14,7 @@
 	<div id="corps">
 
 		<div id="menu">
+			<img src="data/icons8-menu-96.png" alt="menu" >
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="Accueil.html">Accueil</a></li>
@@ -25,8 +26,8 @@
 				<!-- p1 -->
 				<li><a href="Crédits.html">Crédits</a></li>
 				<!-- p2 -->
+				<li><a href="#header" class="top">Revenir en haut de la page</a></li>
 			</ul>
-			<p class="top"><a href="#header" class="top">Revenir en haut de la page</a></p>
 		</div>
 
 		<div id="contenu">
