--- a/Accueil.html
+++ b/Accueil.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+		<!-- encodage utf-8 -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Invictus</title>
-	<link rel="stylesheet" type="text/css" href="_Aziz.css">
+	<link rel="stylesheet" type="text/css" href="_Aziz.css"/>
+	<style type="text/css"></style>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
 	<div id="corps">
 
 		<div id="menu">
-			<img src="data/icons8-menu-96.png" alt="menu" >
+			<img src="data/icons8-menu-96.png" alt="menu"/>
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="Accueil.html">Accueil</a></li>
@@ -31,13 +33,16 @@
 		</div>
 
 		<div id="contenu">
-			<h2>Synopsis</h2>
+			<h2>Résumé</h2>
 			<div class="clearfix">
-				<img src="data/image%201.jpg" />
+				<img src="data/image%201.jpg" alt="affiche du film"/>
 				<p>En 1994, l'élection de Nelson Mandela consacre la fin de l'Apartheid, mais l'Afrique du Sud reste une nation profondément divisée sur le plan racial et économique. Pour unifier le pays et donner à chaque citoyen un motif de fierté, Mandela mise sur
 					le sport, et fait cause commune avec le capitaine de la modeste équipe de rugby sud-africaine. Leur pari : se présenter au Championnat du Monde 1995...</p>
 			</div>
-			<iframe width="1280" height="720" src="https://www.youtube.com/embed/PEO6-fe9qPA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<!--<iframe width="1280" height="720" src="https://www.youtube.com/embed/PEO6-fe9qPA" frameborder="0"></iframe>-->
+			<object type="application/x-shockwave-flash" style="width:1280px; height:720px;" data="https://www.youtube.com/v/PEO6-fe9qPA">
+				<param name="movie" value="https://www.youtube.com/v/PEO6-fe9qPA" />
+			</object>
 
 		</div>
 
