--- a/Histoire.html
+++ b/Histoire.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+		<!-- encodage utf-8 -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Invictus</title>
-	<link rel="stylesheet" type="text/css" href="_Aziz.css">
+	<link rel="stylesheet" type="text/css" href="_Aziz.css"/>
+	<style type="text/css"></style>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
 	<div id="corps">
 
 		<div id="menu">
-			<img src="data/icons8-menu-96.png" alt="menu" >
+			<img src="data/icons8-menu-96.png" alt="menu"/>
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="Accueil.html">Accueil</a></li>
@@ -32,14 +34,7 @@
 
 		<div id="contenu">
 			<h2>Histoire</h2>
-			<p>Le film Invictus est un film basée sur l'histoire réelle de l'Afrique du sud. Nelson Mandela vient d'être élu président de l'Afrique du Sud, il souhaite unir sont pays, développer l'économie et son ouverture au monde. Pour cela il essaye de rassurer
-				la minorité blanche, et de faire accepter au reste du pays qu'il ne faut pas avoir de rancoeur contre l'ancien gouvernement. </br>
-				</br> L'histoire se passe en 1995, l'Afrique du Sud organise la coupe du monde de rugby. Mandela voit en cette occasion sportive le moyen de créer un sentiment d'union national pour supporter l'équipe des Springboks. Cependant cela sera difficile car cette
-				équipe représente pour les Sud-africains noir un symbole de l'apartheid et de leur domination. </br>
-				</br> François Pienaar, le capitaine de l'équipe de rugby est convié par le président pour prendre le thé, c'est le moment que choisit ce dernier pour l'inspirer et le motiver à gagner cette coupe, il fait prendre conscience au joueur de l'importance de
-				cette compétition. L'équipe de rugby devra s'entrainer durement en peu de temps pour espérer gagner la coupe, l'équipe n'est constitué que d'un seul joueur noir « Chester Williams » et d'une majorité de joueur blancs. L'équipe fera des apparitions
-				dans les ghettos dans le but de séduire la population qui peu à peu se mettra à les supporter, puis ils irons visiter la prison de Robben Island ou était incarcérée Mandela. </br>
-				</br> Le président à la veille du match transmet aux Springboks le poème « Invictus » qui inspirera l'équipe. Finalement l’Afrique du sud réussi à gagner la compétition supportée par un pays qui sera unit derrière l'équipe. </p>
+			<p>Le film Invictus est un film basée sur l'histoire réelle de l'Afrique du sud. Nelson Mandela vient d'être élu président de l'Afrique du Sud, il souhaite unir sont pays, développer l'économie et son ouverture au monde. Pour cela il essaye de rassurer la minorité blanche, et de faire accepter au reste du pays qu'il ne faut pas avoir de rancoeur contre l'ancien gouvernement. <br/> <br/> L'histoire se passe en 1995, l'Afrique du Sud organise la coupe du monde de rugby. Mandela voit en cette occasion sportive le moyen de créer un sentiment d'union national pour supporter l'équipe des Springboks. Cependant cela sera difficile car cette équipe représente pour les Sud-africains noir un symbole de l'apartheid et de leur domination. <br/> <br/> François Pienaar, le capitaine de l'équipe de rugby est convié par le président pour prendre le thé, c'est le moment que choisit ce dernier pour l'inspirer et le motiver à gagner cette coupe, il fait prendre conscience au joueur de l'importance de cette compétition. L'équipe de rugby devra s'entrainer durement en peu de temps pour espérer gagner la coupe, l'équipe n'est constitué que d'un seul joueur noir « Chester Williams » et d'une majorité de joueur blancs. L'équipe fera des apparitions dans les ghettos dans le but de séduire la population qui peu à peu se mettra à les supporter, puis ils irons visiter la prison de Robben Island ou était incarcérée Mandela. <br/> <br/> Le président à la veille du match transmet aux Springboks le poème « Invictus » qui inspirera l'équipe. Finalement l’Afrique du sud réussi à gagner la compétition supportée par un pays qui sera unit derrière l'équipe. </p>
 		</div>
 
 	</div>
