--- a/Crédits.html
+++ b/Crédits.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//WC3//DTD XHTML 1.0 Stric//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+		<!-- encodage utf-8 -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Invictus</title>
-	<link rel="stylesheet" type="text/css" href="_Aziz.css">
+	<link rel="stylesheet" type="text/css" href="_Aziz.css"/>
+	<style type="text/css"></style>
 </head>
 
 <body>
@@ -14,7 +17,7 @@
 	<div id="corps">
 
 		<div id="menu">
-			<img src="data/icons8-menu-96.png" alt="menu" >
+			<img src="data/icons8-menu-96.png" alt="menu"/>
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="Accueil.html">Accueil</a></li>
@@ -36,8 +39,15 @@
 			<p>Affiche et Bande d'annonce distribuée par Warner Bros</p>
 			<h3>Texte</h3>
 			<p>Inspirer de "Mon film préfére" de Roso Alexandra</p>
-
-
+			<h3>Validation</h3>
+			<p>
+				<a href="http://jigsaw.w3.org/css-validator/validator$link">
+    			<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS Valide !" />
+    		</a>
+				<a href="http://validator.w3.org/check?uri=referer">
+					<img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict"  />
+				</a>
+			</p>
 		</div>
 
 	</div>
