--- a/Réalisation.html
+++ b/Réalisation.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+		<!-- encodage utf-8 -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Invictus</title>
-	<link rel="stylesheet" type="text/css" href="_Aziz.css">
+	<link rel="stylesheet" type="text/css" href="_Aziz.css"/>
+	<style type="text/css"></style>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
 	<div id="corps">
 
 		<div id="menu">
-			<img src="data/icons8-menu-96.png" alt="menu" >
+			<img src="data/icons8-menu-96.png" alt="menu"/>
 			<h2>Menu</h2>
 			<ul>
 				<li><a href="Accueil.html">Accueil</a></li>
